--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  <!-- Sign-up form start -->
+  <main class="container">
+    <!-- Sign-up form start -->
+    <div id="newsLetter" class="div_newsletter">
+      <div class="left">
+        <h1 class="main_heading">Stay updated!</h1>
+        <p class="heading_description">Join 60,000+ product managers receiving monthly updates on:</p>
+        <ul class="uo_list">
+          <li>Product discovery and building what matters</li>
+          <li>Measuring to ensure updates are a success</li>
+          <li> much more!</li>
+        </ul>
+        <form id="form" action="/">
+          <div class="div_labels">
+            <label id="">Email address</label>
+            <label id="label_error">Valid email required</label>
+          </div>
+          <input class="input-control" id="user_email" type="text" placeholder="email@company.com" />
+          <button class="btn" type="submit">Subscribe to monthly newsletter</button>
+        </form>
 
-  Stay updated!
+      </div>
 
-  Join 60,000+ product managers receiving monthly updates on:
+      <div class="right">
+        <img class="illustration" src="./assets/images/illustration-sign-up-desktop.svg" alt="illustration" aria-label="illustration">
+      </div>
+    </div>
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+    <!-- Sign-up form end -->
 
-  Email address
-  email@company.com
+    <!-- Success message start -->
+    <div id = "div_success" class="div_success">
+      <img src="./assets/images/icon-success.svg" alt="success icon" aria-label="success icon" width="30px">
+      <h1>Thanks for subscribing!</h1>
+      <p>A confirmation email has been sent to ash@loremcompany.com.
+        Please open it and click the button inside to confirm your subscription.</p>
+      <button class="btn"> Dismiss message</button>
+    </div>
 
-  Subscribe to monthly newsletter
+    <!-- Success message end -->
 
-  <!-- Sign-up form end -->
+  </main>
 
-  <!-- Success message start -->
 
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
