add mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
       </div>
 
       <div class="right">
-        <img class="illustration" src="./assets/images/illustration-sign-up-desktop.svg" alt="illustration" aria-label="illustration">
+        <picture>
+          <source media="(max-width: 400px)" srcset="./assets/images/illustration-sign-up-mobile.svg">
+          <img class="illustration" src="./assets/images/illustration-sign-up-desktop.svg" alt="illustration" aria-label="illustration">
+        </picture>
+        
       </div>
     </div>
 
