--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
         <form id="form" action="/">
           <div class="div_labels">
-            <label id="">Email address</label>
+            <label>Email address</label>
             <label id="label_error">Valid email required</label>
           </div>
           <input class="input-control" id="user_email" type="text" placeholder="email@company.com" />
@@ -49,7 +49,7 @@
 
     <!-- Success message start -->
     <div id="div_success" class="div_success">
-      <img src="./assets/images/icon-success.svg" alt="success icon" aria-label="success icon" width="30px">
+      <img src="./assets/images/icon-success.svg" alt="success icon" aria-label="success icon" width="30">
       <h1>Thanks for subscribing!</h1>
       <p>A confirmation email has been sent to ash@loremcompany.com.
         Please open it and click the button inside to confirm your subscription.</p>
@@ -60,11 +60,13 @@
 
   </main>
 
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.frontendmentor.io/home">Satyapriya Mahato</a>.
+    </div>
+  </footer>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Satyapriya Mahato</a>.
-  </div>
 </body>
 
 </html>
